--- a/src/styles.css
+++ b/src/styles.css
@@ -5,10 +5,14 @@
 @tailwind utilities;
 
 * {
-    @apply font-montserrat;
+    @apply font-montserrat box-border;
 }
 
 .form-title {
     font-weight: 600;
     color: orangered;
+}
+
+.a-dashboard-navs{
+    @apply w-full flex  gap-3 text-sm pl-3 py-2 my-1 md:text-base md:py-3 md:pl-5 rounded text-gray-800 hover:bg-gray-100 focus:bg-orange-600 focus:text-white transition-all duration-700;
 }
